/*
 * Copyright (c) 2025 Oracle and/or its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";
option java_package = "io.helidon.webserver.grpc.courses";

import "google/protobuf/empty.proto";

service CourseService {
  rpc GetCourses (google.protobuf.Empty) returns (CourseResponse);
}

message CourseResponse {
  repeated Course courses = 1;
}

message Course {
  string name = 1;
}
